fix(portal-next): text overflow in API doc

--- a/gravitee-apim-console-webui/src/components/documentation/page/_page.scss
+++ b/gravitee-apim-console-webui/src/components/documentation/page/_page.scss
@@ -228,7 +228,6 @@
 .toastui-editor-contents p {
   margin: 10px 0;
   color: #555;
-  word-wrap: break-word;
 }
 
 .toastui-editor-contents h1 {
@@ -384,9 +383,6 @@
 
 .toastui-editor-contents table td {
   border: 1px solid #eaeaea;
-  word-break: break-all;
-  overflow-wrap: break-word;
-  white-space: normal;
 }
 
 .toastui-editor-contents table th {
